# hackathon-backend

./: pyproject.toml
hackathon/core/: serializers.py  views.py
hackathon/hackathon/: settings.py  urls.py
